# ravenwallet-android

./: .gitignore  .gitmodules  README.md  TODO  build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/rvn/release/: output.json
app/src/androidTest/java/: PaperKeyAndroidTests.java
app/src/brdRelease/res/drawable/: ic_launcher_background.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/charts/: AAOptionsConstructor.js  ChartView.html
app/src/main/java/com/platform/: APIClient.java  BRGeoWebSocketHandler.java  BRHTTPHelper.java  GeoLocationManager.java  HTTPServer.java
app/src/main/java/com/platform/addressBook/: AddressBookItem.java  AddressBookRepository.java
app/src/main/java/com/platform/assets/: Asset.java  AssetType.java  AssetsRepository.java  AssetsValidation.java  BurnType.java  QuantityTextWatcher.java  UnitTextWatcher.java  Utils.java
app/src/main/java/com/platform/entities/: TxMetaData.java  WalletInfo.java
app/src/main/java/com/platform/interfaces/: KVStoreAdaptor.java  Middleware.java  Plugin.java
app/src/main/java/com/ravencoin/: BreadApp.java  RavenApp.java
app/src/main/java/com/ravenwallet/: RavenApp.java
app/src/main/jni/: BRCoreJni.c  BRCoreJni.h  CoreJni.c  CoreJni.h  Makefile  README.md  com_ravencoin_core_BRCoreAddress.c  com_ravencoin_core_BRCoreAddress.h  com_ravencoin_core_BRCoreChainParams.c  com_ravencoin_core_BRCoreChainParams.h  com_ravencoin_core_BRCoreJniReference.c  com_ravencoin_core_BRCoreJniReference.h  com_ravencoin_core_BRCoreKey.c  com_ravencoin_core_BRCoreKey.h  com_ravencoin_core_BRCoreMasterPubKey.c  com_ravencoin_core_BRCoreMasterPubKey.h  com_ravencoin_core_BRCoreMerkleBlock.c  com_ravencoin_core_BRCoreMerkleBlock.h  com_ravencoin_core_BRCorePaymentProtocol.c  com_ravencoin_core_BRCorePaymentProtocol.h  com_ravencoin_core_BRCorePeer.c  com_ravencoin_core_BRCorePeer.h  com_ravencoin_core_BRCorePeerManager.c  com_ravencoin_core_BRCorePeerManager.h  com_ravencoin_core_BRCoreTransaction.c  com_ravencoin_core_BRCoreTransaction.h  com_ravencoin_core_BRCoreTransactionAsset.c  com_ravencoin_core_BRCoreTransactionAsset.h  com_ravencoin_core_BRCoreTransactionInput.c  com_ravencoin_core_BRCoreTransactionInput.h  com_ravencoin_core_BRCoreTransactionOutput.c  com_ravencoin_core_BRCoreTransactionOutput.h  com_ravencoin_core_BRCoreWallet.c  com_ravencoin_core_BRCoreWallet.h
app/src/main/jni/core/: .gitmodules  BRAddress.c  BRAddress.h  BRArray.h  BRAssets.c  BRBIP32Sequence.c  BRBIP38Key.h  BRBIP39Mnemonic.c  BRBIP39Mnemonic.h  BRBIP39WordsEn.h  BRBase58.c  BRBase58.h  BRBloomFilter.c  BRChainParams.h  BRCrypto.c  BRCrypto.h  BRInt.h  BRKey.h  BRMerkleBlock.c  BRMerkleBlock.h  BRPaymentProtocol.c  BRPaymentProtocol.h  BRPeer.c  BRPeer.h  BRPeerManager.c  BRPeerManager.h  BRScript.h  BRSet.c  BRSet.h  BRTransaction.c  BRTransaction.h  BRWallet.c  BRWallet.h  ChainParams.h  module.modulemap  test.c
app/src/main/jni/core/crypto/: sha256_sse4.cpp
app/src/main/res/drawable/: address_edit_text_selector.xml  b_blue.xml  b_blue_pressed.xml  b_blue_stroke.xml  b_half_left_blue.xml  b_half_left_blue_stroke.xml  b_half_left_white.xml  b_half_middle_blue.xml  b_half_right_blue.xml  b_half_right_blue_stroke.xml  b_middle_blue_stroke.xml  bch_dialog_gradient.xml  bg_cbx_blue.xml  bg_orange.xml  bg_rb_tab.xml  bg_selected_tab.xml  bg_tetriary_color.xml  bg_unselected_tab.xml  border_shape.xml  bread_gradient.xml  bread_toggle_on.xml  chevron_right_light.xml  crypto_card_shape.xml  finger_gradient.xml  gradient_blue.xml  gradient_blue_reverse.xml  hide_button_shape.xml  ic_add_asset.xml  ic_address_book.xml  ic_baseline_play_arrow_24px.xml  ic_chevron_left.xml  ic_chevron_left_white_with_padding.xml  ic_close_white_with_padding.xml  ic_contact_24px.xml  ic_contacts_blue.xml  ic_contacts_orange.xml  ic_pin_rec_orange_empty.xml  ic_raven_coin_title_white.xml  ic_real_raven.xml  ic_scan.xml  (+17 more)
app/src/main/res/drawable-anydpi/: ic_contact_address.xml
app/src/main/res/drawable-anydpi-v21/: ic_pin_dot_gray.xml  ic_pin_dot_orange.xml  ic_pin_dot_white.xml
app/src/main/res/drawable-sw600dp/: ic_raven_coin_title.xml
app/src/main/res/drawable-xxhdpi/: regular_blue.xml
app/src/main/res/layout/: activity_about.xml  activity_address_book.xml  activity_advanced.xml  activity_bread.xml  activity_camera.xml  activity_currency_settings.xml  activity_disabled.xml  activity_display_currency.xml  activity_fingerprint.xml  activity_home.xml  activity_import.xml  activity_input_words.xml  activity_intro.xml  activity_intro_recover.xml  activity_ipfs_gateway_settings.xml  activity_manage_assets.xml  activity_nodes.xml  activity_notification.xml  activity_paper_key.xml  activity_paper_key_prove.xml  activity_pin.xml  activity_pin_template.xml  activity_qr.xml  activity_restore.xml  activity_security_center.xml  activity_settings.xml  activity_share_data.xml  activity_spend_limit.xml  activity_sync_blockchain.xml  activity_terms_and_conditions.xml  activity_tutorial.xml  activity_user_addresses.xml  activity_wallet.xml  activity_web_view.xml  activity_write_down.xml  bread_alert_dialog.xml  bread_spinner_item.xml  currency_list_item.xml  dialog_add_address_label.xml  dialog_bch_welcome.xml  (+48 more)
app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  integer.xml  strings.xml  styles.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-v23/: dimens.xml
app/src/main/res/values-v24/: dimens.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/test/java/: AssetNameTests.java  PaperKeyTests.java
(+524 files in other folders)
